# xfce4-lightdash-plugin

./: .buildconfig  .gitignore  AUTHORS  Makefile.am  README  config.h.in~  configure.ac.in  unsaved document 1
data/: Makefile.am  lightdash.desktop  lightdash.desktop.in  xfce4-lightdash.appdata.xml  xfce4-lightdash.appdata.xml.in  xfce4-lightdash.desktop  xfce4-lightdash.desktop.in
plugin-data/: Makefile.am
po/: POTFILES.in  ar.po  bg.po  da.po  de.po  es.po  fr.po  he.po  it.po  ja.po  ko.po  lt.po  lv.po  nb.po  nl.po  nn.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sl.po  sv.po  uk.po  zh_CN.po  zh_HK.po  zh_TW.po
src/: .goutputstream-KB5IAY  Makefile.am  appfinder-gdbus.c  appfinder-model.c  appfinder-model.h  appfinder-preferences-ui.h  appfinder-preferences.c  appfinder-preferences.h  appfinder-private.h  appfinder-window.c  appfinder-window.h  lightdash-button.c  lightdash-button.h  lightdash-composited-window.c  lightdash-composited-window.h  lightdash-compositor.c  lightdash-compositor.h  lightdash-dialogs.c  lightdash-dialogs.h  lightdash-image.c  lightdash-image.h  lightdash-pager.c  lightdash-pager.h  lightdash-window-switcher-old.c  lightdash-window-switcher-old.h  lightdash-window-switcher.c  lightdash-window-switcher.h  lightdash-window-tracker-window.h  lightdash-xutils.c  lightdash-xutils.h  lightdash.c  lightdash.desktop  lightdash.desktop.in  lightdash.desktop.in.in  lightdash.h  main.c  table-layout.c  table-layout.h  xfce4-lightdash.c
